fix Design tweaks round 2
- Hide logo on mobile on ticket & hc
- fix fields being cutoff
- search results header reduce font-size
- Bring back hc title on mobile
- Scroll to bottom of container on form error
- Hide logo on most mobile views
- add hover state to form fields
- set hc article content to 100% max-width on mobile

--- a/src/styles/components/Container.scss
+++ b/src/styles/components/Container.scss
@@ -23,8 +23,8 @@ $Container-spacing: 25/$font-size;
 }
 
 .Container--fullscreen-center-vert {
-  padding-top: 40%; /* 1 */
-  padding-top: calc(50% - (#{40/$font-size}rem));
+  padding-top: 20%; /* 1 */
+  padding-top: calc(30% - (#{40/$font-size}rem));
 }
 
 .Container-pullout {
