--- a/src/styles/components/ScrollContainer.scss
+++ b/src/styles/components/ScrollContainer.scss
@@ -43,7 +43,7 @@
     -webkit-overflow-scrolling: touch;
     box-sizing: border-box;
     overflow: auto;
-    height: calc(100% - #{126/$font-size}rem);
+    height: calc(100% - #{114/$font-size}rem);
     max-height: initial;
     max-width: 100%;
 
@@ -52,7 +52,7 @@
     }
 
     &.is-bigheader {
-      height: calc(100% - #{186/$font-size}rem);
+      height: calc(100% - #{174/$font-size}rem);
     }
   }
 }
