--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -249,6 +249,10 @@ $Base-posOffset: $med + 1;
   font-size: #{12/$font-size}rem !important;
 }
 
+.u-textSizeNml {
+  font-size: #{13/$font-size}rem !important;
+}
+
 .u-textSizeMed {
   font-size: #{14/$font-size}rem !important;
 }
